[package]
name = "firewall_controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"] }
netlink-packet-route = "0.15.0"
nispor = "1.2.10"
nix = "0.26.2"
rtnetlink = "0.12.0"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.93"
serde_yaml = "0.9.17"
tera = "1.17.1"
tokio = { version = "1.25.0", features = ["rt", "rt-multi-thread"] }
zbus = "3.10.0"
zbus_systemd = { version = "0.0.8", features = ["systemd1"] }
